[gd_scene load_steps=2 format=2]

[ext_resource path="res://trivia2.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 665.443
margin_top = 69.2886
margin_right = 1002.44
margin_bottom = 213.289

[node name="Button5" type="Button" parent="."]
margin_left = 668.164
margin_top = 70.649
margin_right = 1005.16
margin_bottom = 214.649

[node name="Button6" type="Button" parent="."]
margin_left = 668.164
margin_top = 70.649
margin_right = 1005.16
margin_bottom = 214.649

[node name="Button7" type="Button" parent="."]
margin_left = 668.164
margin_top = 70.649
margin_right = 1005.16
margin_bottom = 214.649

[node name="Button8" type="Button" parent="."]
margin_left = 668.164
margin_top = 70.649
margin_right = 1005.16
margin_bottom = 214.649

[node name="Button9" type="Button" parent="."]
margin_left = 668.164
margin_top = 70.649
margin_right = 1005.16
margin_bottom = 214.649

[node name="Button10" type="Button" parent="."]
margin_left = 668.164
margin_top = 70.649
margin_right = 1005.16
margin_bottom = 214.649

[node name="Button11" type="Button" parent="."]
margin_left = 668.164
margin_top = 70.649
margin_right = 1005.16
margin_bottom = 214.649

[node name="Button12" type="Button" parent="."]
margin_left = 668.164
margin_top = 70.649
margin_right = 1005.16
margin_bottom = 214.649

[node name="Button13" type="Button" parent="."]
margin_left = 668.164
margin_top = 70.649
margin_right = 1005.16
margin_bottom = 214.649

[node name="Button2" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button14" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button15" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button16" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button17" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button18" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button19" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button20" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button21" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button22" type="Button" parent="."]
margin_left = 659.721
margin_top = 270.676
margin_right = 1020.72
margin_bottom = 325.676
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button3" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button23" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button24" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button25" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button26" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button27" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button28" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button29" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button30" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button31" type="Button" parent="."]
margin_left = 662.441
margin_top = 357.739
margin_right = 1023.44
margin_bottom = 412.739
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button4" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button32" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button33" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button34" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button35" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button36" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button37" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button38" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button39" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )

[node name="Button40" type="Button" parent="."]
margin_left = 659.721
margin_top = 446.164
margin_right = 1020.72
margin_bottom = 501.164
rect_pivot_offset = Vector2( -1129.72, -410.676 )
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button14" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="Button15" to="." method="_on_Button15_pressed"]
[connection signal="pressed" from="Button16" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="Button17" to="." method="_on_Button17_pressed"]
[connection signal="pressed" from="Button18" to="." method="_on_Button18_pressed"]
[connection signal="pressed" from="Button19" to="." method="_on_Button19_pressed"]
[connection signal="pressed" from="Button20" to="." method="_on_Button20_pressed"]
[connection signal="pressed" from="Button21" to="." method="_on_Button21_pressed"]
[connection signal="pressed" from="Button22" to="." method="_on_Button22_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button23" to="." method="_on_Button23_pressed"]
[connection signal="pressed" from="Button24" to="." method="_on_Button24_pressed"]
[connection signal="pressed" from="Button25" to="." method="_on_Button25_pressed"]
[connection signal="pressed" from="Button26" to="." method="_on_Button26_pressed"]
[connection signal="pressed" from="Button27" to="." method="_on_Button27_pressed"]
[connection signal="pressed" from="Button28" to="." method="_on_Button28_pressed"]
[connection signal="pressed" from="Button29" to="." method="_on_Button29_pressed"]
[connection signal="pressed" from="Button30" to="." method="_on_Button30_pressed"]
[connection signal="pressed" from="Button31" to="." method="_on_Button31_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button32" to="." method="_on_Button32_pressed"]
[connection signal="pressed" from="Button33" to="." method="_on_Button33_pressed"]
[connection signal="pressed" from="Button34" to="." method="_on_Button34_pressed"]
[connection signal="pressed" from="Button35" to="." method="_on_Button35_pressed"]
[connection signal="pressed" from="Button36" to="." method="_on_Button36_pressed"]
[connection signal="pressed" from="Button37" to="." method="_on_Button37_pressed"]
[connection signal="pressed" from="Button38" to="." method="_on_Button38_pressed"]
[connection signal="pressed" from="Button39" to="." method="_on_Button39_pressed"]
[connection signal="pressed" from="Button40" to="." method="_on_Button40_pressed"]
